feat(client)：统一自定义画网格并优化地面星币堆。